# vrp

./: .gitattributes  .gitignore  CHIRP_COMMIT  CLAUDE.md  GRID_RESTART_PLAN.md  LICENSE  PROGRESS_LOG.md  README.md  WX_ACCESSIBLE_GRID_CELL_CURSOR_REQUEST.md  WX_ACCESSIBLE_GRID_FEEDBACK.md  build.bat  build.py  code-cleanup.md  installer.iss  main.py  main_toga.py  pyproject.toml  run-mac.sh  run-win.bat  run.bat  setup.py
chirp_backend/: __init__.py  bandplan.py  bank_ops.py  col_defs.py  memory_ops.py  migration.py  query.py  radio.py  repeaterbook.py  serial_trace.py  stock_configs.py  undo.py
chirp_backend/extra_drivers/: README.md  __init__.py  kguv96m.py
docs/: architecture.md  chirp-feature-coverage.md  keyboard-map.md  toga-accessibility-checklist.md
docs/kg-uv96m-settings/: PLAN.md  PROGRESS_LOG.md
docs/research/: 2026-06-24-native-grid-voiceover-feasibility.md
docs/superpowers/plans/: 2026-06-18-native-ui.md  2026-06-21-toga-ui-prototype.md  2026-06-23-serial-hardware-verification.md  2026-06-27-grid-row-rearrange-clipboard.md  2026-06-27-native-grid-key-wiring.md  2026-06-27-undo-history.md  2026-06-28-goto-channel-edit-menu.md  2026-07-10-stock-configs-frequency-lists.md  2026-07-21-cross-radio-migration.md  ROADMAP.md
docs/superpowers/specs/: 2026-06-18-native-ui-design.md  2026-06-21-toga-ui-prototype-design.md
getting started/: GettingStarted.html  GettingStarted.md  GettingStarted.txt
help/: GettingStarted.html  GettingStarted.md  GettingStarted.txt  KeyboardCommands.html
static/css/: main.css
templates/: _row_macro.html  channels.html  welcome.html
tests/: conftest.py  test_announce.py  test_bandplan.py  test_bank_import_ui.py  test_bank_mapping_dialog.py  test_bank_migration.py  test_build_artifact_name.py  test_channel_grid.py  test_clipboard.py  test_column_picker.py  test_config.py  test_describe_model.py  test_edit_cell.py  test_editable_columns.py  test_export_csv.py  test_extra_drivers.py  test_favorites_dialog.py  test_freq_format.py  test_frequency_list_dialog.py  test_frozen_drivers.py  test_grid_model.py  test_help_keyboard_parity.py  test_info_dialog.py  test_is_modified.py  test_memory_ops.py  test_migration.py  test_model_filter.py  test_native_entry.py  test_no_wxui_import.py  test_now_at_phrase.py  test_port_picker.py  test_prefs_dialog.py  test_release_version.py  test_repeaterbook.py  test_repeaterbook_dialog.py  test_serial_detect.py  test_serial_open.py  test_serial_ports_list.py  test_serial_prompts.py  test_serial_trace.py  (+17 more)
tools/: audit_bank_migrations.py  audit_migrations.py  audit_special_migrations.py  grid_preview.py  release_version.py  speak_test.py  spike_frozen_audit.py  spike_frozen_drivers.py  spike_frozen_prism.py  spike_native_preloaded.py  spike_native_voiceover.py  update_chirp.py
tools/kg-uv96m/: decode_capture.py  diff_images.py  read_image.py
vrp/: __init__.py  _chirp_path.py  about_dialog.py  app.py  bank_dialog.py  bank_mapping_dialog.py  channel_grid_model.py  config.py  edit_dialog.py  find_dialog.py  help.py  html.py  info_dialog.py  ops_dialog.py  prefs_dialog.py  query_dialogs.py  serial_dialogs.py  settings_dialog.py  special_memory_dialogs.py  speech.py  subdevice_dialog.py  views.py  welcome_dialog.py
vrp/native/: __init__.py  announce.py  app.py  channel_grid.py  grid_model.py  main_window.py
vrp_toga/: __init__.py  app.py  commands.py  table_model.py
