[project]
# Versatile Radio Programmer (VRP)
# A free, open-source, accessible radio memory channel programmer.
# Built on the CHIRP radio driver library (GPLv3).
name = "versatile-radio-programmer"
version = "20260715.3"
description = "Versatile Radio Programmer (VRP) — accessible radio memory channel programmer"
requires-python = "==3.11.*"

dependencies = [
    # The wxPython GUI toolkit. VRP's UI is built entirely from native wx
    # controls (DataViewListCtrl grid + wx.MenuBar); there is no web server,
    # webview, or browser anywhere in the app.
    "wxpython>=4.2.0",
    # Accessible data grid (sibling library), a **native wx.dataview.DataViewListCtrl**
    # — no WebView, no HTML, no JS in the path (NSTableView on macOS, so VoiceOver
    # reads each cell natively; the native list view on Windows/GTK for
    # NVDA/JAWS/Orca). 0.8.0 adds an opt-in app-level Left/Right cell cursor (the
    # `announce=` callback) for Windows/NVDA, where the generic DataViewCtrl does
    # not announce a per-cell cursor itself. Not on PyPI yet (PyPI's latest is
    # 0.4.1, the retired WebView grid), so it resolves from the GitHub repo via
    # [tool.uv.sources] below, pinned to a commit SHA for reproducible builds.
    "wx-accessible-grid>=0.9.0",
    # Unified TTS / screen-reader speech (prism). Used to speak things that
    # ARIA alone can't convey. The Python bindings ship as `prismatoid`.
    "prismatoid>=0.17.0",
    # The CHIRP radio driver library. Installed as an editable local package
    # from the sibling ./chirp clone — see [tool.uv.sources] below. Clone it
    # with `git clone --depth=1 https://github.com/kk7ds/chirp.git` before
    # running `uv sync`.
    "chirp",
    # CHIRP library dependencies. pyserial (the clone pipe) and lark
    # (chirp.bitwise_grammar) are used on every run. requests is declared by
    # CHIRP itself (chirp/setup.py) and is reached through chirp.sources —
    # which VRP DOES use again: RepeaterBook returned on 2026-07-09
    # (chirp_backend/repeaterbook.py). It is therefore bundled in the frozen app
    # too, via that static import; verified by a live fetch from the .exe.
    "pyserial>=3.5",
    "lark>=1.1.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
build = [
    "pyinstaller>=6.10.0",
]
# Experimental, macOS-only alternate packaging path — see setup.py. The
# project's primary, tested packager remains PyInstaller (build.py); this
# extra is separate so `uv sync --extra build` is unaffected.
py2app = [
    "py2app>=0.28; sys_platform == 'darwin'",
]

[project.scripts]
vrp = "main:main"
versatile-radio-programmer = "main:main"

[tool.uv]
# The Python version for the venv is pinned by the `.python-version` file
# (3.11). uv downloads 3.11 automatically if it isn't already installed,
# independently of whatever Python you have system-wide. This ensures the
# PyInstaller build always uses 3.11.

[tool.uv.sources]
# The CHIRP library is a local editable install from the sibling ./chirp
# clone. Declaring it here lets `uv sync` install (and keep) it automatically,
# so no separate `uv pip install -e ./chirp` step is needed. The ./chirp
# directory must exist (git clone it) before running `uv sync`.
chirp = { path = "./chirp", editable = true }
# wx-accessible-menubar resolves from PyPI via the version constraint above.
# wx-accessible-grid 0.9.0 (native DataViewListCtrl + column-locked cell cursor)
# is NOT on PyPI yet — PyPI's latest is 0.4.1, the retired WebView grid. Pull it
# from GitHub, pinned to a commit SHA for reproducible builds (same idea as
# CHIRP's pin). Currently the payown fork (PR upstream: Community-Access/
# wx-accessible-grid#4); bump the rev to Community-Access once the PR merges.
wx-accessible-grid = { git = "https://github.com/payown/wx-accessible-grid.git", rev = "494103f8d7c82f79bc40221d823a7991d8984cf6" }  # 0.9.0 + column-locked nav; PR: Community-Access/wx-accessible-grid#4 (bump to the merged Community-Access rev once it lands)

[tool.pytest.ini_options]
testpaths = ["tests"]
# Silence DeprecationWarnings from the vendored, unmodified CHIRP library so our
# own warnings stay visible. (We don't edit ./chirp; these are upstream's.)
filterwarnings = [
    "ignore::DeprecationWarning:chirp",
    "ignore:.*non-byte-native.*:DeprecationWarning",
    "ignore:.*Invalid negative seek.*:DeprecationWarning",
]
